fixed alignment of search bar

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -40,13 +40,13 @@ main {
 }
 
 .nav-items a {
-    height: 100%;
     padding: 1rem;
-    align-items: flex-end;
+    display: flex;
 }
 
 .nav-items {
-    justify-content:start;
+    display: flex;
+    flex-direction: row;
 }
 
 /* Nav-Bar Section */
@@ -177,7 +177,7 @@ details {
     border-radius: 20px;
 
     display: flex;
-    align-items: right;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -458,10 +458,12 @@ input:focus {
 }
 
 .search-container{
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     border-radius: 10px;
     padding: 4px 8px;
+    height: fit-content;
+    width: fit-content;
     background-color: var(--white);
     justify-content: center;
     align-items: center;
